--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "@types/react-dom": "^18.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-multi-carousel": "^2.8.5",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.30.2",
+    "react-social-icons": "^6.16.0",
+    "slick-carousel": "^1.8.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -39,5 +43,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-slick": "^0.23.13",
+    "autoprefixer": "^10.4.19",
+    "file-loader": "^6.2.0",
+    "postcss": "^8.4.38",
+    "react-router-dom": "^6.23.1",
+    "tailwindcss": "^3.4.3"
   }
 }
