--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "file-loader": "^6.2.0",
     "postcss": "^8.4.38",
     "react-router-dom": "^6.23.1",
-    "tailwindcss": "^3.4.3"
+    "tailwindcss": "^3.4.3",
+    "@babel/plugin-proposal-private-property-in-object": "^7.18.6"
   }
 }
